[tool.poetry]
name = "repl_python3_main"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.70.0"
pydantic = "^1.8.2"
replit = "^3.2.4"
uvicorn = "^0.15.0"
starlette ="^0.16.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
